# 2_Elections_tallying_educational

./: .env.example  .gitignore  APPLY_MALAVA_BANISSA_FINALIZATION.cmd  APPLY_MALAVA_BANISSA_FINALIZATION.sh  APPLY_MALAVA_FIX.cmd  APPLY_REALTIME_UPGRADE.cmd  ARCHIVE_DASHBOARD_AND_REVIEW_WORKBENCH_NOTES.md  AUDIT_AND_CORRECTIONS_13JUL.md  BANISSA_OLKALOU_HIERARCHY_UPDATE_NOTES.md  CHECK_OL_KALOU_NOW.cmd  CONFIGURE_REALTIME_FRONTEND.cmd  Dockerfile  FIVE_MINUTE_SYNC_UPDATE_NOTES.md  GITHUB_ONE_CLICK_GUIDE.md  HOTFIX_NOTES.md  IEBC_HIERARCHY_FIX_NOTES.md  IMPLEMENTATION_STATUS.md  MALAVA_BANISSA_ARCHIVE_FINALIZATION_14JUL2026.md  MALAVA_OCR_VALIDATION_IMPLEMENTATION_14JUL2026.md  MALAVA_UI_AND_CI_FIX_14JUL2026.md  Makefile  OCR_AND_MATCHING_ACCURACY_NOTES.md  OCR_EXTRACTION_AND_PROVISIONAL_TOTALS_NOTES.md  OCR_HUMAN_REVIEW_UPGRADE_14JUL2026.md  PUSH_TO_GITHUB.cmd  PYTHON311_RUFF_FIX_15JUL2026.md  RACE_CONDITION_FIX_NOTES.md  README.md  REALTIME_SYNC_IMPLEMENTATION_14JUL2026.md  RECONCILIATION_TEMPLATE.md  RESTORE_LAST_GOOD_HISTORICAL_SYNC.cmd  RESTORE_LAST_GOOD_HISTORICAL_SYNC.sh  RUN_HISTORICAL_OCR.cmd  START_REALTIME_SYNC.cmd  SYNC_ERROR_DIAGNOSIS_NOTES.md  SYNC_FAILURE_FIX_NOTES.md  UPDATE_IEBC_FORMS_NOW.cmd  UPDATE_OL_KALOU_NOW.cmd  VALIDATION_REPORT.md  accuracy_report.md  (+6 more)
docs/: ADDING_PREVIOUS_POLL.md  AUTOMATED_IEBC_SYNC.md  DEPLOYMENT.md  ELECTION_NIGHT_RUNBOOK.md  HISTORICAL_OCR.md  MALAVA_OCR_VALIDATION.md  OCR_REHEARSAL.md  OL_KALOU_LIVE_TRACKING_ENGINE_SPEC_v2.md  REALTIME_SYNC.md  REFERENCE_DATA_CHECKLIST.md  SAFE_GCV_CROP_OCR_ROLLOUT.md
frontend/: app.js  archive.html  archive.js  config.js  index.html  methodology.html  sentiment.html  styles.css
review_console/: index.html
schemas/: live.schema.json
scripts/: apply_audit_fixes_13jul.py  build_form35a_roi_template.py  calibrate_rejected_rate.py  candidates_template.csv  configure_realtime_frontend.py  extract_gazette_tables.py  import_candidates_csv.py  import_streams_csv.py  measure_historical_ocr_accuracy.py  measure_ocr_accuracy.py  publish_regenerated_outputs.sh  streams_template.csv  suggest_roi_template.py  validate_archive_form_links.py  validate_ocr_rebuild_safety.py  verify_data_tree_unchanged.py
sentiment/: .gitignore  README_sentiment.md  SPECIFICATION.md  SPECIFICATION_ADDENDUM_early_alerts.md
tests/: test_archive.py  test_cloud_crop_ocr.py  test_colours.py  test_extraction.py  test_handwriting_ocr.py  test_historical_accuracy.py  test_historical_ocr.py  test_historical_provisional.py  test_historical_sync.py  test_malava_bootstrap.py  test_ocr_merge.py  test_ocr_rebuild_safety.py  test_ocr_workflow_install_isolation.py  test_portal.py  test_projection.py  test_provisional.py  test_publish_regenerated_outputs.py  test_publisher.py  test_python311_compatibility.py  test_realtime.py  test_reference.py  test_review.py  test_review_api_auth.py  test_timezone.py  test_validation.py  test_words.py  (+1 more)
(+542 files in other folders)
