[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olkalou-live-engine"
version = "0.4.3"
description = "Provenance-first live tracking engine for the 2026 Ol Kalou parliamentary by-election"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-multipart>=0.0.9,<1",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ocr = [
  "Pillow>=10,<13",
  "opencv-python-headless>=4.10,<5",
  "pypdfium2>=4.30,<6",
  "google-cloud-vision>=3.8,<4",
  "boto3>=1.35,<2",
]
historical-ocr = [
  "Pillow>=10,<13",
  "pypdfium2>=4.30,<6",
  "pytesseract>=0.3.13,<1",
  "opencv-python-headless>=4.10,<5",
  # Needed for "auto" mode to actually use GCV/Textract when configured --
  # previously only in the `ocr` extra below, which sync-historical-forms.yml
  # never installs, so cloud OCR could never import even with valid
  # credentials configured. See OCR_AND_MATCHING_ACCURACY_NOTES.md.
  "google-cloud-vision>=3.8,<4",
  "boto3>=1.35,<2",
]
pdf = ["pdfplumber>=0.11,<1"]
s3 = ["boto3>=1.35,<2"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<6", "ruff>=0.6,<1"]

[project.scripts]
olkalou = "olkalou_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
